--- a/tex/lahteet.bib
+++ b/tex/lahteet.bib
@@ -76,12 +76,44 @@ publisher = {Cambridge University Press},
   adsnote = {Provided by the SAO/NASA Astrophysics Data System}
 }
 
+@book{hairer:2008,
+  author={Hairer, E. and N{\o}rsett, S.~P. and Wanner, G.},
+  title={Solving Ordinary Differential Equations I: Nonstiff Problems},
+  year={2008},
+  publisher={Springer Berlin Heidelberg}
+}
+
+@book{press:2007,
+  author={Press, W.~H. and Teukolsky, S.~A. and Vetterling, W.~T. and Flannery, B.~P.},
+  title={Numerical Recipes 3rd Edition: The Art of Scientific Computing},
+  year={2007},
+  publisher={Cambridge University Press}
+}
+
+@Article{bulirsch:1966,
+  author={{Bulirsch}, R. and {Stoer}, J.},
+  title={Numerical treatment of ordinary differential equations by extrapolation methods},
+  journal={Numerische Mathematik},
+  year={1966},
+  month={Mar},
+  volume={8},
+  pages={1-13},
+}
+
+@article{gragg:1965,
+  author={{Gragg}, W.~B.},
+  title={On extrapolation algorithms for ordinary initial value problems},
+  journal={Journal of the Society for Industrial and Applied Mathematics, Series B: Numerical Analysis},
+  volume={2},
+  pages={384-403},
+  year={1965},
+}
+
 @ARTICLE{preto:1999,
    author = {{Preto}, M. and {Tremaine}, S.},
     title = "{A Class of Symplectic Integrators with Adaptive Time Step for Separable Hamiltonian Systems}",
   journal = {AJ},
    eprint = {astro-ph/9906322},
- keywords = {CELESTIAL MECHANICS, STELLAR DYNAMICS, METHODS: NUMERICAL, SOLAR SYSTEM: GENERAL},
      year = 1999,
     month = nov,
    volume = 118,
