--- a/tex/gradu.tex
+++ b/tex/gradu.tex
@@ -518,7 +518,7 @@ and we can insert the result from equation \ref{equ:ttHamilton2} to get the fina
 \end{equation}
 The singularity at $r = 0$ has now been removed. In a bound system $E < 0$, so the solution to the equation of motion is a simple harmonic oscillator.
 
-\subsection{Levi-Civita transformation}
+\subsection{Levi-Civita transformation} \label{sect:2dregu}
 
 Regularization of the two-dimensional case is quite similar to the one-dimensional case, but now our positions and momentums are two dimensional vectors. It has been named the Levi-Civita transformation, after the Italian mathematician who first used this method \citep{levi-civita:1920}. The Hamiltonian is now
 \begin{equation}
@@ -841,29 +841,29 @@ Current observational evidence suggests that long-lived supermassive black hole 
 %TODO kerronko introssa siitä et miks simulaatiota tehään, modaa sen perusteella mitä tässä sanotaan, kuinka paljon taustaa. 
 %Selitä et gadget on muuten hyvä paitsi että, ja miks sit ketju on jebin
 
-One widely used software for galaxy-scale simulations is the smoothed particle hydrodynamics simulation code GADGET-3 \citep{springel:2005}. It works well on large scales and can be used to effectively simulate global dynamics of galaxies and even galaxy mergers. However one inherent problem of the software is that due to it smoothing the simulated masses, it cannot solve very small-scale effects. To this end \cite{rantala:2017} developed an extension for GADGET-3 called KETJU, which implements algorithmically regularized regions around supermassive black holes to allow for solving the detailed dynamics of these systems, while still getting the benefits of the galaxy-wide efficiency of GADGET-3. 
+One of the widely used software packages for galaxy-scale simulations is the smoothed particle hydrodynamics simulation code GADGET-3 \citep{springel:2005}. It can be used to effectively simulate the global dynamics of galaxies, for simulating galaxy mergers, and even for cosmological simulations. Because the number of particles that is feasible to simulate on these scales is magnitudes smaller than the number of real particles, e.g. stars, there is need to account for the fact that these simulated particles are not real individual objects but rather large clumps that represent the real particles. Because of this these objects are ``softened'' by spreading their gravitational potential, making them non-point masses. One limitation of the software is that due to the use of softening, it cannot resolve very small-scale effects.
 
-KETJU utilizes the algorithmic regularization chain, or AR-CHAIN, method \citep{mikkola:2002, mikkola:2006,mikkola:2008b}, which combines algorithmic regularization with an older Kustaanheimo-Stiefel chain method \citep{mikkola:1993}. In that method computational time is saved by KS-regularizing only select interparticle vectors, so that the selected vectors and particles form a continuous chain. 
+To this end \cite{rantala:2017} developed an extension for GADGET-3 called KETJU. The code implements algorithmically regularized regions around supermassive black holes to allow for solving the detailed dynamics of these systems, while still getting the benefits of the galaxy-wide efficiency of GADGET-3. Algorithmic regularization means dealing with the difficult close encounters and collisions of point masses in a dynamical simulation via a time transformation, while not actually removing the collisional singularity from the equations of motion.
 
-The AR-CHAIN method is comprised of three important parts: algorithmic regularization, i.e. a time transformation combined with a leapfrog integrator, the use of a chained coordinate system to reduce roundoff errors, and the Gragg-Bulirsch-Stoer extrapolation method for attaining very high numerical accuracy. These three parts will next be discussed separately in more detail. Lastly there will be an overview of the actual implementation of this method.
+KETJU utilizes the algorithmic regularization chain, or AR-CHAIN, method \citep{mikkola:2002, mikkola:2006,mikkola:2008b}, which combines algorithmic regularization with an older Kustaanheimo-Stiefel chain method \citep{mikkola:1993}. In this method computational time is saved by KS-regularizing only certain interparticle vectors, so that the selected vectors and particles form a continuous chain. 
+
+The AR-CHAIN method is comprised of three important parts: algorithmic regularization, the use of a chained coordinate system to reduce roundoff errors, and the Gragg-Bulirsch-Stoer extrapolation method for attaining very high numerical integration accuracy. These three parts will next be discussed separately in more detail. Lastly there will be an overview of the actual implementation of this method.
 
 
 %Koodi flowchartti jotenki
 
-%(TODO: yleistä selitystä ar-chainistä ja miten yhdistyy gadgettiin, mainitse ar-chainin osaset: aikamuunnos, chain, BS algoritmi, selitä enemmän teoriaa ja kaavoja jutuille joita koodiosiossa selitetään, lähteet näihin, ainakin Mikkolan papereita, BS paperi, numerical methods)
-
-%\noindent Kuva ketjustetusta systeemistä \\
-%Kuva leapfrogista \\
+%Kuva leapfrogista
 %Mukaileva kuva antin BS esimerkistä?
 
 
 \section{Algorithmic regularization}
 
-The main goal of algorithmic regularization is to be able to deal with close encounters in dynamical systems without having to resort to more computationally expensive regularization methods. This can be achieved via two slightly different time transformations. 
+The main goal of the algorithmic regularization method is to be able to deal with close encounters of particles in dynamical systems without having to resort to more computationally expensive regularization methods, like the Kustaanheimo-Stiefel regularization. This can be achieved via two slightly different time transformations. 
 
-The first method is called the Logarithmic Hamiltonian (LogH) method, which was discovered by \cite{mikkola:1999} and \cite{preto:1999}. To guarantee simulation accuracy, it is desirable to be able to use a symplectic integration method, i.e. a method which constrains the allowed motions in phase space so strongly that the usual tendency of numerical orbit integrations to drift in energy is absent. So in practice a symplectic integrator conserves the energy of the system. One of the most common ones is the leapfrog integrator.
+The first approach is called the Logarithmic Hamiltonian (LogH) method, which was discovered by \cite{mikkola:1999} and \cite{preto:1999}. To guarantee simulation accuracy, it is desirable to be able to use a symplectic integration method, i.e. a method which constrains the allowed motions in phase space strongly enough so that the usual tendency of numerical orbit integrations to drift in energy is absent. In practice a symplectic integrator conserves the energy of the system. The leapfrog integrator is one of the most common ones.
 
-The leapfrog method is used for numerically integrating second order differential equations of the form $d^2x/dt^2 = F(x)$, equivalently $dx/dt = v , \ dv/dt = F(x)$. It gains its name from the way it updates the positions and velocities of the system at interleaved time points, so that they ``leapfrog'' over each other. The integration can be done in two different ways, depending on whether we first update the position, which is known as drifting, or the velocity, which is known as kicking. If we update the position first it is called the ``Drift-Kick-Drift'' (DKD) version, and conversely if we update the velocity first it is called the ``Kick-Drift-Kick'' (KDK) version. The equations for a DKD version are
+\subsection{Leapfrog}
+A leapfrog can be used for numerically integrating second order differential equations of the form $d^2x/dt^2 = F(x)$, equivalently $dx/dt = v , \ dv/dt = F(x)$. It gains its name from the way it updates the positions and velocities of the system at interleaved time points, so that they ``leapfrog'' over each other. The integration can be performed in two different ways, depending on whether we first update the position, which is known as drifting, or the velocity, which is known as kicking. If we update the position first it is called the ``Drift-Kick-Drift'' (DKD) version, and conversely if we update the velocity first it is called the ``Kick-Drift-Kick'' (KDK) version. The equations for a DKD version are
 \begin{equation}
 \begin{aligned}
 x_{i+1/2} &= x_{i}+v_{i} \frac{\Delta t}{2} \\
@@ -873,35 +873,42 @@ x_{i+1} &= x_{i+1/2}+v_{i+1}{\frac {\Delta t}{2}} \ ,
 \end{equation}
 where $x_i$ and $v_i$ are the values at step $i$, and $\Delta t$ is the time step. In a dynamical system the function $F(x)$ is simply the acceleration. First the position is updated by half a time step, then the velocity is updated based on this half step value, and finally the position is updated again so that the whole system has advanced by one time step. In addition to its symplectic nature, the leapfrog method is also time reversible, meaning that we can use it to accurately integrate the system backwards in time.
 
+\subsection{Logarithmic Hamiltonian}
 To be able to use an explicit symplectic method such as the leapfrog, we need to have a Hamiltonian that is separable, i.e. where the different parts contain only one type of canonical coordinates.
 For an N-body system such a Hamiltonian is
 \begin{equation}
 H = \sum_i^N \frac{1}{2}m_i \boldsymbol{v}_i^2 - \sum_i^N \sum_{j>i}^N \frac{G m_i m_j}{r_{ij}} = T - U \ ,
 \end{equation}
-where $T$ is the kinetic energy and $U$ is the so-called force function, which is the negative of the potential energy. The binding energy $B$ of the system is thus \mbox{$B = -H = U-T$}. If we now apply the time transformation
+where $T$ is the kinetic energy and $U$ is the so-called force function, which is the negative of the potential energy. The binding energy $B$ of the system is thus \mbox{$B = -H = U-T$}. If we apply the time transformation
 \begin{equation}
 \mathrm{d}s = U \mathrm{d}t \ ,
 \end{equation}
-where $s$ is the new fictitious time variable, equation \ref{equ:timetransform} gives us the time transformed Hamiltonian:
+where $s$ is the new fictitious time variable, we can get a new Hamiltonian through the Poincaré time transform mentioned in section \ref{sect:2dregu}:
+\begin{equation}
+\Gamma = g (H+p_0) \ ,
+\end{equation}
+where $p_0$ is the binding energy and $g$ is the time transform function that is gotten from $\mathrm{d}t = g \mathrm{d}s$. 
+Thus the time transformed Hamiltonian is
 \begin{equation}
 \Gamma = \frac{T-U+B}{U} \ . \label{equ:loghGamma}
 \end{equation}
-This Hamiltonian is not separable yet. However, because along the correct orbit $\Gamma = 0$ since the Hamiltonian equals the energy of the system, we can use the function 
+This Hamiltonian is not separable yet. However, because along the correct orbit $\Gamma = 0$ since the Hamiltonian equals the energy of the system, we can use
 \begin{equation}
 \tilde{\Gamma} = \mathrm{log}(1+\Gamma) \label{equ:loghNewGamma}
 \end{equation}
-as the new Hamiltonian \citep{mikkola:1999}.
-We can turn the equation \ref{equ:loghGamma} into the form 
+as the new Hamiltonian \citep{mikkola:1999}. This is since if $\Gamma$ equals 0, the logarithm also gives us 0, so along the correct orbit $\tilde{\Gamma}$ equals the time transformed Hamiltonian.
+We can turn equation \ref{equ:loghGamma} into the form 
 \begin{equation}
 1 + \Gamma = \frac{T+B}{U} \ ,
 \end{equation}
-which combined with \ref{equ:loghNewGamma} gives us 
+take the logarithm of both sides, and combine it with \ref{equ:loghNewGamma} which gets us 
 \begin{equation}
 \tilde{\Gamma} = \mathrm{log}(T+B) - \mathrm{log}(U)
 \end{equation}
 which is in a separable form. Thus we have managed to form a time transformed Hamiltonian that is separable, and thus usable for an explicit symplectic integrator. 
 
-The second method is called Time Transformed Leapfrog (TTL) method, developed by \cite{mikkola:2002}. This method relies on a time transformation
+\subsection{Time Transformed Leapfrog}
+The second approach is called Time Transformed Leapfrog (TTL) method, developed by \cite{mikkola:2002}. This method relies on a time transformation
 \begin{equation}
 \mathrm{d}s = \Omega \mathrm{d}t \ ,
 \end{equation}
@@ -926,13 +933,13 @@ The use of these variables $\Omega$ and $\omega$ ensures that encounters of the 
 \end{equation}
 Here $\tilde{m}$ is the mean mass product of the system, and the mean mass epsilon $\epsilon_{\Omega}$ is defined by the user, and a typical value is of the order $\sim 10^{-3}$. Choosing the value for $\Omega$ in this manner guarantees the proper treatment for even the smaller bodies in the system.
 
-These two aforementioned methods can be combined into a single time transform function with 
+These two aforementioned methods can be combined into a single time transform function defined as 
 \begin{equation}
 ds = [\alpha U + \beta \Omega + \gamma] dt = [\alpha (T + B) + \beta \omega + \gamma] dt \ .
 \end{equation}
-These definitions are identical for the exact solution. Here the $\alpha$, $\beta$, and $\gamma$ are user-defined parameters which determine which kind of regularization will be used. One can also easily see that if we define $\Omega = U$, the logarithmic Hamiltonian and the time transformed leapfrog methods are mathematically equivalent \citep{mikkola:2008b}. Numerically they are not the same however, due to roundoff errors in updating the value of $\Omega$. 
+The two definitions are identical for the exact solution. Here $\alpha$, $\beta$, and $\gamma$ are user-defined parameters which determine which kind of regularization will be used. One can also easily see that if we define $\Omega = U$, the logarithmic Hamiltonian and the time transformed leapfrog methods are mathematically equivalent \citep{mikkola:2008b}. Numerically they are not the same however, due to roundoff errors in updating the value of $\Omega$. 
 
-Choosing $(\alpha, \beta, \gamma) = (1,0,0)$ gives us the logarithmic Hamiltonian method, $(\alpha, \beta, \gamma) = (0,1,0)$ gives the time transformed leapfrog, and $(\alpha, \beta, \gamma) = (0,0,1)$ includes no time transformation at all, and thus it corresponds to the regular leapfrog function. \cite{mikkola:2006} suggest a possible choice of $(\alpha, \beta, \gamma) = (1,\mathrm{small},0)$, which corresponds to a mix of LogH and TTL. This would be desirable for system with very large mass ratios so that the smallest masses are not ignored when choosing the timestep. 
+Choosing $(\alpha, \beta, \gamma) = (1,0,0)$ gives us the logarithmic Hamiltonian method, $(\alpha, \beta, \gamma) = (0,1,0)$ gives the time transformed leapfrog, and $(\alpha, \beta, \gamma) = (0,0,1)$ includes no time transformation at all, and thus it corresponds to the regular leapfrog method. \cite{mikkola:2006} suggest a possible choice of $(\alpha, \beta, \gamma) = (1,\mathrm{small},0)$, which corresponds to a mix of LogH and TTL. This would be desirable for systems with very large particle mass ratios so that the smallest masses are not ignored when choosing the timestep. 
 
 The time transformed equations of motion of an N-body system can now be written for both the coordinates
 \begin{equation}
@@ -952,7 +959,7 @@ and the velocities
 %\frac{\mathrm{d} B}{\mathrm{d}s} &= -t' \sum_i^N m_i \boldsymbol{v}_i \cdot \boldsymbol{f}_i \\
 Here $\boldsymbol{f}_i$ are any possible external perturbing accelerations that might affect the system.
 
-\cite{mikkola:2008b} concluded that using the choice of $(\alpha, \beta, \gamma) = (1,0,0)$, i.e. pure logarithmic Hamiltonian method, gives the best results for integration. Despite this the time transformed leapfrog method and the variables $\Omega$ and $\omega$ are not useless, since monitoring these variables can help identify encounters of light particles, and provides the integrator a way to forcibly lower the timestep if needed.
+\cite{mikkola:2008b} concluded that using the choice of $(\alpha, \beta, \gamma) = (1,0,0)$, i.e. pure logarithmic Hamiltonian method, gives the most accurate results for the integration. Despite this the time transformed leapfrog method and the variables $\Omega$ and $\omega$ are not useless, since monitoring these variables can help identify encounters of light particles, and provides the integrator a way to forcibly lower the timestep if needed.
 
 By using a time transformation we do not experience any catastrophic errors in the case of close-by two-body encounters since the integration with the leapfrog is exact even on collision orbits, as long as the system is not evaluated during collisions \citep{mikkola:1999}. The algorithm conserves energy down to numerical precision, and the only error is a phase error for time, which scales proportionally to $\mathcal{O}(\Delta t^3)$. This is a spectacular result for a method where the collisional singularity is not actually removed.
 
@@ -960,9 +967,9 @@ By using a time transformation we do not experience any catastrophic errors in t
 
 \section{Chain coordinate system}
 
-Computers use floating-point arithmetic to represent real numbers, so rounding errors are inevitable when doing calculations with such numbers. This is especially prevalent when subtracting two very large numbers whose values are very close to each other, for example a close encounter of a pair of particles if their coordinates are measured from a distant origin. Reducing this roundoff error as much as possible is paramount to ensure that calculations and thus the simulations are correct. Reducing this error can be achieved via introducing a new chained coordinate system, where the position of a particle is defined by its relative position to a previous particle.
+Computers use floating-point arithmetic to represent real numbers, so rounding errors are inevitable when doing calculations with such numbers. Rounding errors are especially prevalent when subtracting two very large numbers whose values are very close to each other, for example a close encounter of a pair of particles if their coordinates are measured from a distant origin. Reducing this roundoff error as much as possible is important in order to ensure that calculations and thus the simulations are correct. Reducing this error can be achieved via introducing a new chained coordinate system, where the position of a particle is defined by its relative position to a previous particle in the chain.
 
-This method is similar to the earlier mentioned Kustaanheimo-Stiefel chain regularization method \citep{mikkola:1993}, where the system is not globally KS regularized, but instead we do the KS transform for the shortest interparticle vectors in the system. The difference is that in AR-CHAIN we do not do a KS transformation, only linking all the particles together in a chain. \cite{mikkola:1999} pointed out that without using this kind of chain structure, the numerical roundoff when calculating the forces is too large for satisfactory results. Thanks to this structure, the separations of particles that are near each other can be gained from the chain, so we do not need to calculate them by doing the error-prone subtraction.
+This method is similar to the earlier described Kustaanheimo-Stiefel chain regularization method \citep{mikkola:1993}, where the system is not globally KS regularized. Instead we do the KS transform only for the shortest interparticle vectors in the system. The difference is that in AR-CHAIN we do not do a KS transformation, instead we only link all the particles together in a chain. \cite{mikkola:1999} pointed out that without using this kind of chain structure, the numerical roundoff when calculating the forces is too large for satisfactory results. Thanks to this structure, the separations of particles that are near each other can be derived from the chain, so we do not need to calculate them by doing the error-prone subtraction.
 It should be noted that the chain transformation is just a linear mapping, so doing it does not require us to alter the Hamiltonian of the system. This allows the chain structure to be directly used with the transformations shown in the previous section.
 
 Before constructing the chained system we need to have the system in a center of mass (CoM) frame. The position and velocity of the CoM of the dynamical system are defined as
@@ -973,12 +980,12 @@ Before constructing the chained system we need to have the system in a center of
 \end{aligned}
 \end{equation}
 
-The construction of the chain is quite straightforward, and it starts by first calculating all the interparticle distances in the CoM frame. These are pairwise symmetric, so if we have $N$ particles, we need to calculate only $N(N-1)/2$ vectors instead of $N^2$. We pick the shortest distance, and the two particles are picked as the ``head'' and ``tail'' of the chain. The chain is extended by adding to it the particle that is closest to either the head or tail of the chain, if it is not already a member of the chain. This added particle then becomes the new head or tail of the chain. This procedure is continued until no suitable particles remain outside of the chain. In figure \ref{fig:chain} one can see an example of a chained system consisting of 11 particles.
+The construction of the chain is quite straightforward, and it starts by first calculating all the interparticle distances in the CoM frame. These are pairwise symmetric, so if we have $N$ particles, we only need to calculate $N(N-1)/2$ vectors instead of $N^2$. We pick the shortest distance, and the two particles are picked as the ``head'' and ``tail'' of the chain. The chain is extended by adding to it the particle that is closest to either the head or tail of the chain, if it is not already a member of the chain. This added particle then becomes the new head or tail of the chain. This procedure is continued until no suitable particles remain outside of the chain. In figure \ref{fig:chain} one can see an example of a chained system consisting of 11 particles.
 
 \begin{figure}[h!tb]
 \centering
 \includegraphics[scale=1]{../images/chain.pdf}
-\caption{An illustration of a chained coordinate system demonstrating the 10 interparticle position vectors between 10 stars and a supermassive black hole. As the closest interparticle distance in this system is between the black hole and the nearby star, the construction of the chain starts from there and then extends from both the head and tail until complete.}
+\caption{An illustration of a chained coordinate system demonstrating the 10 interparticle position vectors between 10 stars and a supermassive black hole. As the closest interparticle distance in this system is between the black hole and the nearby star, the construction of the chain starts from there and then extends from both the head and tail until complete. The dashed line shows the shortest path between the two stars in the CoM frame, which is very different compared to the path when following the chain.}
 \label{fig:chain}
 \end{figure}
 
